--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 20 15:11:19 2003  Tim Janik  <timj@gtk.org>
+
+	* adapted code to compile with gcc-3.3 and g++-3.3.
+
 Sun May 18 05:05:58 2003  Tim Janik  <timj@gtk.org>
 
 	* sfistore.c: syntax fixup for inlined binary data: "binary-appendix".
