--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- need detailed "ladspa" info/debug messages which tell when what plugin file is being loaded
+- add option to disable ladspa plugin loading
 - add vorbis cutter test
 - don't always rebuild lib-list [Rebuild]-button
 - nuke BSE file crawling functions
