moved here from bsemagictest.c.
Tue May 20 18:39:03 2003  Tim Janik  <timj@gtk.org>

        * tests/magictest.c: moved here from bsemagictest.c.

        * tests/mathtests.c: moved here from gsltests.c.

        * tests/testfft.c: moved here from gslffttest.c.

        * tests/testwavechunk.c: moved here from gslwchunk.c.

        * tests/Makefile.am: added testwavechunk testfft to TESTS so
        make check runs these automatically.

        * removed: bsemagictest.c, gsltests.c, gslffttest.c and gslwchunk.c.

svn path=/trunk/; revision=1097

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- rename gslwave files appropriately
 - need detailed "ladspa" info/debug messages which tell when what plugin file is being loaded
 - add option to disable ladspa plugin loading
 - add vorbis cutter test
