--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Fri May 23 20:18:29 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-synthesis.texi: SOS link update.
+
+	* docs/faq.texi: added anchors, added MIDI howto entry.
+
+	* beast-gtk/bstapp.c: cleanups.
+
+	* beast-gtk/bstsupershell.c: virtualize parent notebook label name,
+	cleanups.
+
+	* beast-gtk/bstwavereposhell.c: set parent notebook label to "Waves".
+
 Tue May 20 13:04:30 2003  Tim Janik  <timj@gtk.org>
 
 	* code and configure adoptions to gcc-3.3 and g++-3.3.
