--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sun May 25 15:01:40 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstapp.[hc]: update menu entries to say "Custom Synth"
+	and create a BseCSynth since BseSNet became abstract.
+
+	* beast-gtk/bstplayback.c: BseCSynth fixups.
+
 Fri May 23 20:18:29 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-links-synthesis.texi: SOS link update.
