--- a/NEWS
+++ b/NEWS
@@ -2,14 +2,14 @@ Overview of Changes in BEAST/BSE 0.5.2:
 
 * Tracks now support waves directly as Synth input
 * Added wave/synth selection dialog for tracks
-* Major improvements to filw/wave selection dialogs
+* Major improvements to file/wave selection dialogs
 * Fixed time zone handling
-* Added WAVE file beast recording ability
+* Added ability to monitor PCM output to WAVE files
 * Reenabled sample rate adjustments in preferences
 * Image (Logo) improvements [Alper Ersoy]
 * Documentation improvements [Alper, Timj]
 * Adapted code to gcc-3.3/g++-3.3
-* Miscellaneous code fixes
+* Miscellaneous major and minor code fixes
 
 Overview of Changes in BEAST/BSE 0.5.1:
 
