--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ Overview of Changes in BEAST/BSE 0.5.2:
 * Added ability to monitor PCM output to WAVE files
 * Reenabled sample rate adjustments in preferences
 * Image (Logo) improvements [Alper Ersoy]
+* Upgraded to Guile-1.6
+* Fixed signal handling in scheme
 * Documentation improvements [Alper, Timj]
 * Adapted code to gcc-3.3/g++-3.3
 * Miscellaneous major and minor code fixes
