--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- remove BseBinData
 - fix undo for: BseWave, BsePart, BseDataPocket
 - get rid of bse_procedure_execvl
 - get rid of super->mod_time
