--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Overview of Changes in BEAST/BSE 0.5.2:
 
+* Implemented unlimited Undo/Redo facilities
 * Tracks now support waves directly as Synth input
 * Added wave/synth selection dialog for tracks
 * Major improvements to file/wave selection dialogs
